# avc_urdf

./: CMakeLists.txt  README.md  avc.rosinstall  package.xml  test.txt
avc/: CMakeLists.txt  package.xml
avc_motion/: CMakeLists.txt  README.md  README.txt  package.xml
avc_motion/control/dynamic_models/include/dynamic_models/: bicycle.h
avc_motion/control/dynamic_models/src/: bicycle.cpp  unicycle.cpp
avc_motion/control/turtlebot_sim/: CMakeLists.txt
avc_motion/include/: bicycle.h  go_to_gps.h  list_goal_generator.h  simple_go_to_goal.h
avc_motion/launch/: avc_rvizSim.launch  avc_rvizSim2.launch  gps_goal.launch  list_goal.launch  multi_turtlebot_gazebo.launch  proj2_avc.launch  proj2_quad.launch  proj3.launch  quad_rvizSim.launch  rand_goal.launch  turtlebot3_gazebo.launch  turtlebot3_rvizSim.launch  turtlebot_fakenode.launch  turtlebot_gazebo.launch  turtlebot_gazebo_bot2.launch  turtlebot_rvizSim_teleop.launch  turtlesim.launch
avc_motion/launch/include/: avc_description.launch.xml  description.launch.xml  quad_description.launch.xml
avc_motion/nodes/: avc_teleop_key
avc_motion/rviz/: Proj2.rviz  Turtlebot1.rviz  Turtlebot1_gazebo.rviz  Turtlebot_multi.rviz  urdf.rviz
avc_motion/src/: avc_vehicle.cpp  bicycle.cpp  bicycle2.cpp  go_to_gps.cpp  goalGPS.py  list_goal_generator.cpp  sendSound.py  simple_go_to_goal.cpp  simple_map_tf.cpp
avc_motion/urdf/: quadrotor.urdf  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_burger_for_autorace.urdf.xacro  turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro  turtlebot3_waffle_for_open_manipulator.urdf.xacro  turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi.urdf.xacro  turtlebot3_waffle_pi_for_open_manipulator.urdf.xacro
avc_urdf/: README.md  package.xml
avc_urdf/launch/: 13-diffdrive.launch  control.launch  display.launch
avc_urdf/meshes/: chassis2.DAE  wheels.DAE
avc_urdf/rviz/: urdf.rviz
avc_urdf/urdf/: 13-diffdrive.urdf.xacro  bvc.xacro  geometries.xacro  joints.xacro  links.xacro  materials.xacro  properties.xacro
avc_urdf/yaml/: gazebo_ros_control_params.yaml
config/: diffdrive.yaml
control/: README.md
control/controllers/: CMakeLists.txt  package.xml
control/controllers/include/controllers/: multi_agent_joystick.h
control/controllers/src/: multi_agent_joystick.cpp
control/dynamic_models/: CMakeLists.txt  package.xml
control/dynamic_models/include/dynamic_models/: unicycle.h
control/dynamic_models/src/: bicycle.cpp
control/turtlebot_sim/: CMakeLists.txt  package.xml
control/turtlebot_sim/include/turtlebot_sim/: avc_vehicle.h  turtlebot_vehicle.h
control/turtlebot_sim/src/: avc_vehicle.cpp  turtlebot_vehicle.cpp
controllers/include/controllers/: joystick_control.h
controllers/src/: joystick_control.cpp
dynamic_models/: CMakeLists.txt
dynamic_models/include/dynamic_models/: bicycle.h
launch/: 13-diffdrive.launch  control.launch  display.launch  gazebo.launch
meshes/: chassis.DAE  chassis2.DAE  wheels.DAE
src/: bvc.xacro
urdf/: 13-diffdrive.urdf.xacro  bvc.xacro  gazebo.xacro  geometries.xacro  inertial.xacro  joints.xacro  links.xacro  materials.xacro  properties.xacro  transmissions.xacro
yaml/: gazebo_ros_control_params.yaml
