<?xml version="1.0"?>
<package format="2">
  <name>avc</name>
  <version>1.0.0</version>
  <description>
    ROS packages for the avc (meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <maintainer email="sebastian@helzer.eu">Sebastian</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>avc_urdf</exec_depend>
  <exec_depend>avc_motion</exec_depend>
  <export><metapackage/></export>
</package>
